--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   provider: ^3.1.0
   uuid: ^2.2.2
   flutter_spinkit: "^4.1.2"
+  country_state_city_picker: ^1.2.4
 
 dev_dependencies:
   flutter_test:
