--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_spinkit: "^4.1.2"
   country_state_city_picker: ^1.2.4
   flutter_country_picker: ^0.1.6
+  page_transition: ^1.1.7+3
 
 dev_dependencies:
   flutter_test:
