--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   cloud_firestore: ^0.12.9+4
   provider: ^3.1.0
   uuid: ^2.2.2
-  flutter_spinkit: "^4.1.2"
+  flutter_spinkit:
   country_state_city_picker: ^1.2.4
   flutter_country_picker: ^0.1.6
   page_transition: ^1.1.7+3
